# pywt

./: pyproject.toml
src/pywt/: __init__.py  __main__.py  cli.py  plot.py  wavetable.py
wavetables/: growlfm1.flac  saw2sin.flac  sqr2sin.flac  tri2sin.flac
