[project]
name = "pywt"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lily Duolingo", email = "lilyduolingo5@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]

[tool.mypy]
packages = ["pywt"]
